# adf2stowf

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CODING_RULES.md  README.md  adf2stowf.py  adfread.py  common.py  orbital_transformations.py  performance_optimization_tips.md  profile_performance.py  pyproject.toml  setup.py  stowfn.cpp  stowfn.py  stowfn_atorbs.cpp  stowfn_norm.cpp
.claude/: README.md  SKILL.md
.claude/skills/adf2stowf/: SKILL.md
.github/workflows/: tests.yml
adf2stowf/: adf2stowf.py  adfread.py  cli_main.py  common.py  stowfn.py
adf2stowf.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
docs/: Makefile  adf2stowf.rst  conf.py  index.rst  kf.rst  modules.rst  requirements.txt
docs/source/: adf2stowf.rst  adfread.rst  api.rst  conf.py  index.rst  installation.rst  math.rst  stowfn.rst  usage.rst
docs/source/api/: adf2stowf.rst  adfread.rst  kfreader.rst  modules.rst  stowfn.rst
docs/source/math/: cartesian.rst  cusp.rst  orbitals.rst  slater.rst
examples/Ar/: TAPE21.asc  input  out  stowfn.data
examples/Ar/casino/: input  out  stowfn.data
examples/B/: input  out  stowfn.data
examples/B/casino/: out
examples/Be/: TAPE21.asc  out  stowfn.data
examples/Be/casino/: out  stowfn.data
examples/Be_TZ2P/casino/: out
examples/Be__QZ4P/: TAPE21.asc  input  out  stowfn.data
examples/Be__error/: out
examples/Be__error__nocusp/: TAPE21.asc  out  stowfn.data
examples/C/: TAPE21.asc  input  out  stowfn.data
examples/C/casino/: input  out
examples/CN⁻/: input  out  stowfn.data
examples/Ga/: TAPE21.asc  input  out  stowfn.data
examples/Ga/casino/: out  stowfn.data
examples/H/: TAPE21.asc  out  stowfn.data
examples/H/casino/: input  out  stowfn.data
examples/H2/: TAPE21.asc  TAPE21.txt  input  input.out  out  stowfn.data
examples/HCN/: input  out  stowfn.data
examples/He/: TAPE21.asc  input  out  stowfn.data
examples/Kr/: TAPE21.asc  input  out  stowfn.data
examples/N/: TAPE21.asc  input  out  stowfn.data
examples/Ne/: TAPE21.asc  input  out  stowfn.data
examples/O3/: input  out  stowfn.data
examples/Xe/: TAPE21.asc  input  out  stowfn.data
test/: test_regression.py
tests/: test_regression.py  test_vmc_energy.py
(+17 files in other folders)
