[build-system]
requires = ['setuptools>=61.0', 'wheel']
build-backend = 'setuptools.build_meta'

[project]
name = 'adf2stowf'
version = '0.9.0'
description = 'Cconverter from ADF to CASINO'
authors = [
    {name = "Vladmir Konkov", email = "Konjkov.VV@gmail.com"},
]
maintainers = [
    {name = "Vladmir Konkov", email = "Konjkov.VV@gmail.com"},
]
readme = "README.md"
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Environment :: Console',
    'Intended Audience :: Science/Research',
    'Operating System :: POSIX :: Linux',
    'Topic :: Scientific/Engineering :: Chemistry',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3.9',
]
requires-python = "~=3.9"
dependencies = [
    'numpy==1.24.4',
    'scipy-weave==0.19.0',
    'matplotlib>=3.9.0',
]
[project.urls]
repository = 'https://github.com/Konjkov/adf2stowf/tree/original'

[tool.setuptools]
packages = ['adf2stowf']

[project.scripts]
adf2stowf = "adf2stowf.main:cli_main"
