[build-system]
requires = ['setuptools>=61.0', 'wheel', 'pybind11']
build-backend = 'setuptools.build_meta'

[project]
name = 'adf2stowf'
version = '1.0.0'
description = 'Converter from ADF TAPE21.asc to CASINO stowfn.data'
authors = [
    {name = "Vladimir Konkov", email = "Konjkov.VV@gmail.com"},
]
maintainers = [
    {name = "Vladimir Konkov", email = "Konjkov.VV@gmail.com"},
]
readme = "README.md"
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Environment :: Console',
    'Intended Audience :: Science/Research',
    'Operating System :: POSIX :: Linux',
    'Topic :: Scientific/Engineering :: Chemistry',
    'Programming Language :: C++',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
]
requires-python = ">=3.10,<3.12"
dependencies = [
    'numpy>=1.24.4',
    'matplotlib>=3.9.0',
]
[project.urls]
repository = 'https://github.com/Konjkov/adf2stowf'

[tool.setuptools]
packages = ['adf2stowf']

[project.scripts]
adf2stowf = "adf2stowf.adf2stowf:main"

[tool.ruff]
src = ["adf2stowf"]
line-length = 150
respect-gitignore = true
